Updated Dockerfile to match bash script installation approach

--- a/text-generation-webui/Dockerfile
+++ b/text-generation-webui/Dockerfile
@@ -23,38 +23,48 @@ RUN apt-get update && apt-get install -y \
     python3-dev \
     gcc \
     g++ \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Set working directory
+# Set working directory and create installer directory structure
 WORKDIR /app
+RUN mkdir -p installer_files/conda installer_files/env
 
-# Clone text-generation-webui from your fork
+# Environment isolation variables (matching bash script)
+ENV PYTHONNOUSERSITE=1
+ENV PYTHONPATH=""
+ENV PYTHONHOME=""
+ENV CUDA_PATH="/app/installer_files/env"
+ENV CUDA_HOME="/app/installer_files/env"
+
+# Clone text-generation-webui
 RUN git clone https://github.com/WouterGlorieux/text-generation-webui.git .
 
-# Create conda environment
-RUN conda create -y -n textgen python=3.11
+# Create conda environment with Python 3.10 (matching bash script version)
+RUN conda create -y -k --prefix /app/installer_files/env python=3.10
 
 # Initialize conda in bash
 SHELL ["/bin/bash", "-c"]
 
-# Set environment variables
-ENV CONDA_DEFAULT_ENV=textgen
-ENV PYTHONNOUSERSITE=1
-ENV PATH="/opt/conda/envs/textgen/bin:$PATH"
+# Set conda environment path
+ENV PATH="/app/installer_files/env/bin:$PATH"
 
-# Install PyTorch first
-RUN conda run -n textgen pip3 install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+# Install PyTorch with CUDA support
+RUN conda run --prefix /app/installer_files/env pip3 install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
 
-# Install basic dependencies first
-RUN conda run -n textgen pip3 install wheel setuptools ninja
+# Install basic dependencies
+RUN conda run --prefix /app/installer_files/env pip3 install wheel setuptools ninja
 
-# Install requirements in smaller chunks to avoid memory issues
+# Copy and install requirements
 COPY requirements.txt /app/requirements.txt
-RUN conda run -n textgen pip3 install -r requirements.txt --no-deps && \
-    conda run -n textgen pip3 install -r requirements.txt
+RUN conda run --prefix /app/installer_files/env pip3 install -r requirements.txt --no-deps && \
+    conda run --prefix /app/installer_files/env pip3 install -r requirements.txt
+
+# Copy one_click.py (if it exists in your setup)
+COPY one_click.py /app/one_click.py
 
 # Expose the default port
 EXPOSE 7860
 
-# Command to run the web UI
-CMD ["conda", "run", "-n", "textgen", "python", "server.py", "--listen"]
+# Command to run the web UI (can be modified to use one_click.py if needed)
+CMD ["conda", "run", "--prefix", "/app/installer_files/env", "python", "server.py", "--listen"]
