--- a/text-generation-webui/Dockerfile
+++ b/text-generation-webui/Dockerfile
@@ -38,4 +38,4 @@ EXPOSE 7860
 
 # Set the entrypoint to run one_click.py
 ENTRYPOINT ["/bin/bash", "-c"]
-CMD ["source /opt/conda/etc/profile.d/conda.sh && conda activate /app/installer_files/env && python one_click.py"]
+CMD ["source /opt/conda/etc/profile.d/conda.sh && conda activate /app/installer_files/env && cd /app/text-generation-webui && python one_click.py"]
