feat: explicitly set CUDA 12.1 by setting USE_CUDA118=false

--- a/text-generation-webui/Dockerfile
+++ b/text-generation-webui/Dockerfile
@@ -4,6 +4,7 @@ FROM ubuntu:22.04
 # Set environment variables
 ENV LAUNCH_AFTER_INSTALL=false \
     GPU_CHOICE=A \
+    USE_CUDA118=false \
     PATH="/root/miniconda3/bin:${PATH}" \
     CONDA_AUTO_UPDATE_CONDA=false
 
