--- a/text-generation-webui/Dockerfile
+++ b/text-generation-webui/Dockerfile
@@ -13,6 +13,8 @@ RUN apt-get update && apt-get install -y \
     git \
     wget \
     curl \
+    openssh-server \
+    openssh-client \
     ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
